[tool.poetry]
name = "hmdriver2"
version = "1.0.0"
description = "UI Automation Framework for Harmony Next"
authors = ["codematrixer <chenli_gogo@163.com>"]
license = "MIT"
readme = "README.md"
include = ["*/asset/*"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"